Add attribute filter to force SSL requests
- NOTE: currently, the project expects SSL port to be 44302, switch to 443

--- a/ApiPractice/ApiPractice.csproj
+++ b/ApiPractice/ApiPractice.csproj
@@ -16,7 +16,7 @@
     <TargetFrameworkVersion>v4.5.3</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44302</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -157,6 +157,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="ForceHttpsAttribute.cs" />
     <Compile Include="GaAuthorizationAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
